# sticky-poisson-hmm-python

./: .gitignore  CITATION.cff  LICENSE  Launch_HMM_Studio.bat  README.md  pyproject.toml  tutorial.md
hmm_spikes/: __init__.py  _fit_worker.py  analysis.py  data.py  gaussian.py  graph.py  multinoulli.py  phmm.py  plotting.py  selection.py
hmm_studio/: __init__.py  _csv_dialog_shot.py  _csv_smoke.py  _fit_task.py  _parallel_bench.py  _screenshot.py  _smoketest.py  app.py  csv_import.py  dataio.py  models.py  panels.py  run_studio.py  state_store.py  theme.py  views.py  workers.py
scripts/: convert_test_data.py  run_bic_scan.py  run_sticky_demo.py
